[gd_scene load_steps=4 format=2]

[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Stats/EnemyStats.tscn" type="PackedScene" id=3]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]
[connection signal="take_damage" from="Hurtbox" to="." method="_on_Hurtbox_take_damage"]

[editable path="Hurtbox"]
